05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky
  namespace: tasky
  labels:
    app: tasky
spec:
  type: ClusterIP
  selector:
    app: tasky
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
